sqlparse.ypp
%{
#include<stdio.h>
#include<stdlib.h>
#include<cstring>
#include<iostream>
#include"sqlparse.tab.hpp"
using namespace std;
#include"tables.h"
#include<fstream>
//#define yydebug
#define YYDEBUG 1
//#define YYSTYLE double
//#define YYSTYLE char*
#define YYSTYLE int
extern void yyerror(char*);
void yyerror(const char*);
extern int yylex(void);

int flag_kv = 0;
int flag = 0;
int flag_sel=0;
int flag_sel_val=0;
int flag_exit=0;
int flag_update_table=0;
int flag_delete_table=0;
int flag_select_table=0;
int iffirstcol=1;

int colp = -1;//属性指针,colp+1就是当前表属性个数
int valp = -1;//元组指针,标注当前操作元素位置
int val_num = 0;//元组行数

int datatype = 0;
int dataattr = 0;
int tablenum=0;
int t=0;
int col_search;
int ifinsert=1;
bool flag_col=true;
int ifgoback=0;
int val_num_count=0;
int val_num_count_flag=0;
bool ifnesting=false;

string temp1;
string temp2;
string updatetemp;
string tablename;
extern int flag_ifint;
extern string temp;
extern string tempnum;
extern string tempdou;
extern int flag_comp;
extern int flag_ifdou;
table tt[10];//最多可以建十个表
//ofstream parw("parser.txt");
FILE *stderr;


%}  
%left '+' '-'
%left '*' '/' '%'

%union {
    int intval;       
    double floatval;      
    char strval[16];  
    //int subtok; 
}

%token DATABASE
%token TABLE
%token VARCHAR
%token INT
%token DOUBLE
%token TIME
%token NOT
%token NULLS
%token DEFAULT
%token UNIQUE
%token PRIMARY
%token KEY
%token IN

%token CREATE
%token INSERT
%token INTO
%token DELETE
%token FROM
%token SELECT
%token WHERE
%token UPDATE
%token SET
%token CHECK
%token VALUES

%token NAME
%token INTNUM
%token DOUNUM
%token DECIMAL
%token STRING
%token COMPARISON
%token ANDOP
%token OR

%type<strval> NAME
%type<intval> INTNUM
%type<floatval> DOUNUM

%%
start: 
start stmt ';' '\n'{
    tt[tablenum].fileout("TESTDATA");
    printf("\n");
    printf("\n");
}
| start NAME{
    if(temp=="exit")
    {
        flag=1;
        flag_exit=1;
    }
}
|
;
stmt:
select_stmt
| delete_stmt
| insert_stmt
| create_database_stmt
| create_table_stmt
| update_stmt
;
create_database_stmt:
CREATE DATABASE NAME
;
create_table_stmt:
create_table_name '(' create_col_list ')'{
    if(!flag_kv){
        printf("error:there is no primary key\n");
        val_num=0;
        valp=-1;
        colp=-1;
        tt[tablenum].valp=-1;
        tt[tablenum].colp=-1;
    }
    //tablenum++;
}
;
create_table_name:
CREATE TABLE NAME{
    tt[tablenum].name=temp;
    //flag_col=!flag_col;
};
create_col_list:
data_type
| create_definition
| create_col_list ',' create_definition
;
create_definition:
NAME data_type column_atts {
    colp++;
    //cout<<colp<<temp<<datatype<<dataattr<<endl;
    if(dataattr==5)
        flag_kv=1;
    tt[tablenum].insert_col(temp,datatype,dataattr,colp);
    dataattr=0;//完整性约束若不置0，会被之前度属性值度完整性约束覆盖
}
;
data_type:
VARCHAR '(' INTNUM ')'{
    datatype=1;
}
| INT {
    datatype=2;
}
| DOUBLE {
    datatype=3;
}
| TIME {
    datatype=4;
}
| DECIMAL '(' INTNUM ',' INTNUM ')'
;
column_atts:
| NOT NULLS {
    dataattr=1;
}
| DEFAULT {
    dataattr=2;
}
|UNIQUE {
    dataattr=3;
}
| CHECK {
    dataattr=4;
}
| PRIMARY KEY {
    dataattr=5;
}
; 

insert_stmt:
insert_table_name opt_col_names VALUES insert_vals_list
{
    if(val_num_count_flag==0)
    {
        val_num_count=0;
    }
    val_num=val_num-val_num_count;
    //cout<<val_num_count<<endl;
    tt[tablenum].valp=tt[tablenum].valp-val_num_count;
}
;
insert_table_name:
INSERT INTO NAME{
    if(tt[tablenum].name!=temp)
    {
        cout<<"there is not a table named: "<<temp<<endl;
        val_num_count_flag=1;
    }
    else{
        val_num_count_flag=0;
    }
    //flag_col=!flag_col;
};
opt_col_names:
| '(' column_list ')'
;
column_list:
NAME
| column_list ',' NAME
;
insert_vals_list:
'(' insert_vals ')'{
    valp=-1;
    if(ifgoback==1)
    {
        val_num--;
        tt[tablenum].valp--;    
    }
    ifgoback=0;
}
| insert_vals_list ',' '(' insert_vals ')'
{
    valp=-1;
    if(ifgoback==1)
    {
        val_num--;
        tt[tablenum].valp--;    
    }
    ifgoback=0;
}
;
insert_vals:
expr{
    valp++;
    val_num++;
    val_num_count++;
    if(tt[tablenum].datatype[valp]==1)
    {
        if(temp.at(0)==39)
        {
            t=temp.length()-2;
            temp=temp.substr(1,t);
            tt[tablenum].insert_val(temp,val_num,valp);
        }
        else{
            cout<<"Input error:the varchar type value should be included by''."<<endl;
            ifinsert=0;
            ifgoback=1;
        }
    }
    else if(tt[tablenum].datatype[valp]==2)
    {
        if(flag_ifint!=1)
        {
            cout<<"Input error:the int type value should be formed by [0-9]*."<<endl;
            ifinsert=0;
            ifgoback=1;
        }
        else{
            //cout<<"good"<<val_num<<"  "<<valp<<endl;
            tt[tablenum].insert_val(tempnum,val_num,valp);
            //flag_ifdou=0;
            flag_ifint=0;
        }
    }
    else if(tt[tablenum].datatype[valp]==3)
    {
        if(flag_ifdou!=1)
        {
            cout<<"Input error:the double type value should be formed by [0-9]*.[0-9]*."<<endl;
            ifinsert=0;
            ifgoback=1;
        }
        else{
            tt[tablenum].insert_val(tempdou,val_num,valp);
            flag_ifdou=0;
            //flag_ifint=0;
        }
    }
    //cout<<val_num<<valp<<temp<<endl;
    flag_col=true;
}
| DEFAULT
| insert_vals ',' expr{
    valp++;
    //cout<<valp<<temp<<endl;
    if(tt[tablenum].datatype[valp]==1)
    {
        if(temp.at(0)==39)
        {
            t=temp.length()-2;
            temp=temp.substr(1,t);
            tt[tablenum].insert_val(temp,val_num,valp);
        }
        else{
            cout<<"Input error:the varchar type value should be included by''."<<endl;
            ifinsert=0;
            ifgoback=1;
        }
    }
    else if(tt[tablenum].datatype[valp]==2)
    {
        if(flag_ifint!=1)
        {
            cout<<"Input error:the int type value should be formed by [0-9]*."<<endl;
            ifinsert=0;
            ifgoback=1;
        }
        else{
            tt[tablenum].insert_val(tempnum,val_num,valp);
            //flag_ifdou=0;
            flag_ifint=0;
        }
    }
    else if(tt[tablenum].datatype[valp]==3)
    {
        if(flag_ifdou!=1)
        {
            cout<<"Input error:the double type value should be formed by [0-9]*.[0-9]*."<<endl;
            ifinsert=0;
            ifgoback=1;
        }
        else{
            tt[tablenum].insert_val(tempdou,val_num,valp);
            flag_ifdou=0;
            //flag_ifint=0;
        }
    }
    flag_col=true;
}
| insert_vals ',' DEFAULT
;

select_stmt:
SELECT select_expr_list FROM {iffirstcol=0;} select_table_name opt_where{
    if(flag_select_table==1)//当扫描到属性列时，是不知道后面会不会有嵌套的，所以仅记录第一次即可
    {
        if(!ifnesting)
        {
            tt[tablenum].select_table(flag_sel,flag_sel_val);
            tt[tablenum].disp_table();//select语句会调用这个函数，但嵌套查询时，只会调用一次
            tt[tablenum].init_select_col();
            tt[tablenum].init_select_val();
            flag_sel=0;
            flag_sel_val=0;
        }
        ifnesting=false;
        iffirstcol=1;
    }
    flag_select_table=0;
};
select_table_name:
NAME{
    if(tt[tablenum].name!=temp)
    {
        cout<<"there is not a table named: "<<temp<<endl;
    }
    else{
        flag_select_table=1;
    }
    //flag_col=!flag_col;
}
;
select_expr_list:
NAME{
    if(iffirstcol)
        tt[tablenum].select_col(temp);
}
| select_expr_list ',' NAME
{
    if(iffirstcol)
        tt[tablenum].select_col(temp);
}
| '*'{
    flag_sel=1;    
}
;
opt_where:
{
    flag_sel_val=1;
}
| WHERE expr{
    flag_sel_val=0;
}
| WHERE NAME '=' '(' select_stmt ')'
{
    ifnesting=true;
}
| WHERE NAME IN '(' select_stmt ')'
{
    ifnesting=true;
}
;
expr:
NAME
{
    if(flag_col)//$$=temp;
    {
        temp1=temp;
        flag_col=!flag_col;
    }
    else{
        temp2=temp;
        flag_col=!flag_col;
    }
}
| INTNUM{
    temp2=tempnum;
    if(!flag_col)
    {
        temp2=tempnum;
        flag_col=!flag_col;
    }
    datatype=2;
}
| DOUNUM{
    temp2=tempdou;
    if(!flag_col)
    {
        temp2=tempdou;
        flag_col=!flag_col;
    }
    datatype=3;
}
| expr COMPARISON expr{
    //cout<<temp1<<temp2<<flag_comp<<endl;
    col_search=tt[tablenum].ifexist_col(temp1);//找到要搜索哪一列
    if(col_search!=0)
    {
        col_search--;
        //cout<<temp2<<endl;
        if(temp2.at(0)==39)
        {
            t=temp2.length()-2;
            temp2=temp2.substr(1,t);
            //cout<<temp2<<endl;
            if(flag_comp==1)
            {
                tt[tablenum].select_val(temp2,col_search,1,1);
            }
            else{
                cout<<"Input error"<<endl;
            }
        }
        else if(temp2.at(0)>=48&&temp2.at(0)<=57)
        {
            if(datatype==2)
            {
                //cout<<"here"<<" "<<temp2<<" "<<col_search<<endl;
                tt[tablenum].select_val(temp2,col_search,2,flag_comp);
            }
            else if(datatype==3)
            {
                tt[tablenum].select_val(temp2,col_search,3,flag_comp);
            }
        }
        else{
            cout<<"Input error:2"<<endl;
        }
    }
    else{
        cout<<"the is no attribute named:"<<temp1<<endl;
    }
}
| expr '+' expr
| expr '-' expr
| expr '*' expr
| expr '/' expr
| expr '%' expr
;
delete_stmt:
delete_table_name opt_where{
    if(flag_delete_table==1)
    {
        tt[tablenum].delete_val_table();
        val_num=val_num-tt[tablenum].delete_v;
        tt[tablenum].delete_v=0;
        tt[tablenum].init_select_col();
        tt[tablenum].init_select_val();
    }
    flag_delete_table=0;
};
delete_table_name:
DELETE FROM NAME{
    if(tt[tablenum].name.compare(temp))
    {
        cout<<"there is not a table named: "<<temp<<endl;
    }
    else{
        flag_delete_table=1;
    }
    //flag_col=!flag_col;
}
;
update_stmt:
update_table_name SET update_asgn_list opt_where
{
    if(flag_update_table)
    {
        tt[tablenum].select_table(flag_sel,flag_sel_val);
        tt[tablenum].updata_val_table(updatetemp);
        tt[tablenum].init_select_val();
    }
    flag_update_table=0;
}
;
update_table_name:
UPDATE NAME{
    if(tt[tablenum].name.compare(temp))
    {
        cout<<"there is not a table named: "<<temp<<endl;
    }
    else
    {
        flag_update_table=1;
    }
    //flag_col=!flag_col;
}
;
update_asgn_list:
expr COMPARISON expr{
    if(flag_comp!=1)
    {
        cout<<"comparison error"<<endl;
    }
    else{
        col_search=tt[tablenum].ifexist_col(temp1);//找到要搜索哪一列
        
        if(col_search!=0)
        {
            col_search--;
            tt[tablenum].update_c=col_search;
            if(temp2.at(0)==39)
            {
                //cout<<"good"<<col_search<<endl;
                if(tt[tablenum].datatype[col_search]==1)
                {
                    t=temp2.length()-2;
                    temp2=temp2.substr(1,t);
                    updatetemp=temp2;
                }
                else{
                    cout<<"attribute error"<<endl;
                }
            }
            else{
                updatetemp=temp2;
            }
        }
        else{
            cout<<"the is no attribute named:"<<temp1<<endl;
        }
    }
}
| update_asgn_list ',' NAME COMPARISON expr
;

%%
#include "scanner.cpp"
int main()
{
    
    tt[tablenum].init_table();
    colp=3;
    val_num=4;
    yydebug=1;
    stderr=fopen("parser.txt","w");
    tt[tablenum].filein("TESTDATA");
    // tablename="BB";
    // tt[tablenum].insert_col("Dno",2,5,0);
    // tt[tablenum].insert_col("Dname",1,1,1);
    // tt[tablenum].insert_col("Dsex",1,1,2);
    // tt[tablenum].insert_col("Dage",2,1,3);
    // tt[tablenum].insert_val("0001",1,0);
    // tt[tablenum].insert_val("HaoYiwei",1,1);
    // tt[tablenum].insert_val("male",1,2);
    // tt[tablenum].insert_val("36",1,3);
    // tt[tablenum].insert_val("0002",2,0);
    // tt[tablenum].insert_val("LuoXiao",2,1);
    // tt[tablenum].insert_val("female",2,2);
    // tt[tablenum].insert_val("18",2,3);
    // tt[tablenum].insert_val("0003",3,0);
    // tt[tablenum].insert_val("Liuwei",3,1);
    // tt[tablenum].insert_val("male",3,2);
    // tt[tablenum].insert_val("30",3,3);
    // tt[tablenum].insert_val("0004",4,0);
    // tt[tablenum].insert_val("DengYingchao",4,1);
    // tt[tablenum].insert_val("female",4,2);
    // tt[tablenum].insert_val("27",4,3);

    while(flag_exit!=1)
    {
        yyparse();
        if(flag){
            printf("\n");
            printf("see you soon\n");
        }
        else{
            printf("syntax error\n");
        }
    }
    return 0;
}
void yyerror(char* s){}
void yyerror(const char* s){};
