sqlparse.output
Terminals unused in grammar

   STRING
   ANDOP
   OR


State 101 conflicts: 1 shift/reduce
State 102 conflicts: 1 shift/reduce
State 103 conflicts: 1 shift/reduce
State 104 conflicts: 1 shift/reduce
State 105 conflicts: 1 shift/reduce
State 106 conflicts: 6 shift/reduce
State 107 conflicts: 6 shift/reduce


Grammar

    0 $accept: start $end

    1 start: start stmt ';' '\n'
    2      | start NAME
    3      | %empty

    4 stmt: select_stmt
    5     | delete_stmt
    6     | insert_stmt
    7     | create_database_stmt
    8     | create_table_stmt
    9     | update_stmt

   10 create_database_stmt: CREATE DATABASE NAME

   11 create_table_stmt: create_table_name '(' create_col_list ')'

   12 create_table_name: CREATE TABLE NAME

   13 create_col_list: data_type
   14                | create_definition
   15                | create_col_list ',' create_definition

   16 create_definition: NAME data_type column_atts

   17 data_type: VARCHAR '(' INTNUM ')'
   18          | INT
   19          | DOUBLE
   20          | TIME
   21          | DECIMAL '(' INTNUM ',' INTNUM ')'

   22 column_atts: %empty
   23            | NOT NULLS
   24            | DEFAULT
   25            | UNIQUE
   26            | CHECK
   27            | PRIMARY KEY

   28 insert_stmt: insert_table_name opt_col_names VALUES insert_vals_list

   29 insert_table_name: INSERT INTO NAME

   30 opt_col_names: %empty
   31              | '(' column_list ')'

   32 column_list: NAME
   33            | column_list ',' NAME

   34 insert_vals_list: '(' insert_vals ')'
   35                 | insert_vals_list ',' '(' insert_vals ')'

   36 insert_vals: expr
   37            | DEFAULT
   38            | insert_vals ',' expr
   39            | insert_vals ',' DEFAULT

   40 select_stmt: SELECT select_expr_list FROM select_table_name opt_where

   41 select_table_name: NAME

   42 select_expr_list: NAME
   43                 | select_expr_list ',' NAME
   44                 | '*'

   45 opt_where: %empty
   46          | WHERE expr
   47          | WHERE NAME '=' '(' select_stmt ')'
   48          | WHERE NAME IN '(' select_stmt ')'

   49 expr: NAME
   50     | INTNUM
   51     | DOUNUM
   52     | expr COMPARISON expr
   53     | expr '+' expr
   54     | expr '-' expr
   55     | expr '*' expr
   56     | expr '/' expr
   57     | expr '%' expr

   58 delete_stmt: delete_table_name opt_where

   59 delete_table_name: DELETE FROM NAME

   60 update_stmt: update_table_name SET update_asgn_list opt_where

   61 update_table_name: UPDATE NAME

   62 update_asgn_list: expr COMPARISON expr
   63                 | update_asgn_list ',' NAME COMPARISON expr


Terminals, with rules where they appear

$end (0) 0
'\n' (10) 1
'%' (37) 57
'(' (40) 11 17 21 31 34 35 47 48
')' (41) 11 17 21 31 34 35 47 48
'*' (42) 44 55
'+' (43) 53
',' (44) 15 21 33 35 38 39 43 63
'-' (45) 54
'/' (47) 56
';' (59) 1
'=' (61) 47
error (256)
DATABASE (258) 10
TABLE (259) 12
VARCHAR (260) 17
INT (261) 18
DOUBLE (262) 19
TIME (263) 20
NOT (264) 23
NULLS (265) 23
DEFAULT (266) 24 37 39
UNIQUE (267) 25
PRIMARY (268) 27
KEY (269) 27
IN (270) 48
CREATE (271) 10 12
INSERT (272) 29
INTO (273) 29
DELETE (274) 59
FROM (275) 40 59
SELECT (276) 40
WHERE (277) 46 47 48
UPDATE (278) 61
SET (279) 60
CHECK (280) 26
VALUES (281) 28
NAME (282) 2 10 12 16 29 32 33 41 42 43 47 48 49 59 61 63
INTNUM (283) 17 21 50
DOUNUM (284) 51
DECIMAL (285) 21
STRING (286)
COMPARISON (287) 52 62 63
ANDOP (288)
OR (289)


Nonterminals, with rules where they appear

$accept (46)
    on left: 0
start (47)
    on left: 1 2 3, on right: 0 1 2
stmt (48)
    on left: 4 5 6 7 8 9, on right: 1
create_database_stmt (49)
    on left: 10, on right: 7
create_table_stmt (50)
    on left: 11, on right: 8
create_table_name (51)
    on left: 12, on right: 11
create_col_list (52)
    on left: 13 14 15, on right: 11 15
create_definition (53)
    on left: 16, on right: 14 15
data_type (54)
    on left: 17 18 19 20 21, on right: 13 16
column_atts (55)
    on left: 22 23 24 25 26 27, on right: 16
insert_stmt (56)
    on left: 28, on right: 6
insert_table_name (57)
    on left: 29, on right: 28
opt_col_names (58)
    on left: 30 31, on right: 28
column_list (59)
    on left: 32 33, on right: 31 33
insert_vals_list (60)
    on left: 34 35, on right: 28 35
insert_vals (61)
    on left: 36 37 38 39, on right: 34 35 38 39
select_stmt (62)
    on left: 40, on right: 4 47 48
select_table_name (63)
    on left: 41, on right: 40
select_expr_list (64)
    on left: 42 43 44, on right: 40 43
opt_where (65)
    on left: 45 46 47 48, on right: 40 58 60
expr (66)
    on left: 49 50 51 52 53 54 55 56 57, on right: 36 38 46 52 53 54
    55 56 57 62 63
delete_stmt (67)
    on left: 58, on right: 5
delete_table_name (68)
    on left: 59, on right: 58
update_stmt (69)
    on left: 60, on right: 9
update_table_name (70)
    on left: 61, on right: 60
update_asgn_list (71)
    on left: 62 63, on right: 60 63


State 0

    0 $accept: . start $end

    $default  reduce using rule 3 (start)

    start  go to state 1


State 1

    0 $accept: start . $end
    1 start: start . stmt ';' '\n'
    2      | start . NAME

    $end    shift, and go to state 2
    CREATE  shift, and go to state 3
    INSERT  shift, and go to state 4
    DELETE  shift, and go to state 5
    SELECT  shift, and go to state 6
    UPDATE  shift, and go to state 7
    NAME    shift, and go to state 8

    stmt                  go to state 9
    create_database_stmt  go to state 10
    create_table_stmt     go to state 11
    create_table_name     go to state 12
    insert_stmt           go to state 13
    insert_table_name     go to state 14
    select_stmt           go to state 15
    delete_stmt           go to state 16
    delete_table_name     go to state 17
    update_stmt           go to state 18
    update_table_name     go to state 19


State 2

    0 $accept: start $end .

    $default  accept


State 3

   10 create_database_stmt: CREATE . DATABASE NAME
   12 create_table_name: CREATE . TABLE NAME

    DATABASE  shift, and go to state 20
    TABLE     shift, and go to state 21


State 4

   29 insert_table_name: INSERT . INTO NAME

    INTO  shift, and go to state 22


State 5

   59 delete_table_name: DELETE . FROM NAME

    FROM  shift, and go to state 23


State 6

   40 select_stmt: SELECT . select_expr_list FROM select_table_name opt_where

    '*'   shift, and go to state 24
    NAME  shift, and go to state 25

    select_expr_list  go to state 26


State 7

   61 update_table_name: UPDATE . NAME

    NAME  shift, and go to state 27


State 8

    2 start: start NAME .

    $default  reduce using rule 2 (start)


State 9

    1 start: start stmt . ';' '\n'

    ';'  shift, and go to state 28


State 10

    7 stmt: create_database_stmt .

    $default  reduce using rule 7 (stmt)


State 11

    8 stmt: create_table_stmt .

    $default  reduce using rule 8 (stmt)


State 12

   11 create_table_stmt: create_table_name . '(' create_col_list ')'

    '('  shift, and go to state 29


State 13

    6 stmt: insert_stmt .

    $default  reduce using rule 6 (stmt)


State 14

   28 insert_stmt: insert_table_name . opt_col_names VALUES insert_vals_list

    '('  shift, and go to state 30

    $default  reduce using rule 30 (opt_col_names)

    opt_col_names  go to state 31


State 15

    4 stmt: select_stmt .

    $default  reduce using rule 4 (stmt)


State 16

    5 stmt: delete_stmt .

    $default  reduce using rule 5 (stmt)


State 17

   58 delete_stmt: delete_table_name . opt_where

    WHERE  shift, and go to state 32

    $default  reduce using rule 45 (opt_where)

    opt_where  go to state 33


State 18

    9 stmt: update_stmt .

    $default  reduce using rule 9 (stmt)


State 19

   60 update_stmt: update_table_name . SET update_asgn_list opt_where

    SET  shift, and go to state 34


State 20

   10 create_database_stmt: CREATE DATABASE . NAME

    NAME  shift, and go to state 35


State 21

   12 create_table_name: CREATE TABLE . NAME

    NAME  shift, and go to state 36


State 22

   29 insert_table_name: INSERT INTO . NAME

    NAME  shift, and go to state 37


State 23

   59 delete_table_name: DELETE FROM . NAME

    NAME  shift, and go to state 38


State 24

   44 select_expr_list: '*' .

    $default  reduce using rule 44 (select_expr_list)


State 25

   42 select_expr_list: NAME .

    $default  reduce using rule 42 (select_expr_list)


State 26

   40 select_stmt: SELECT select_expr_list . FROM select_table_name opt_where
   43 select_expr_list: select_expr_list . ',' NAME

    FROM  shift, and go to state 39
    ','   shift, and go to state 40


State 27

   61 update_table_name: UPDATE NAME .

    $default  reduce using rule 61 (update_table_name)


State 28

    1 start: start stmt ';' . '\n'

    '\n'  shift, and go to state 41


State 29

   11 create_table_stmt: create_table_name '(' . create_col_list ')'

    VARCHAR  shift, and go to state 42
    INT      shift, and go to state 43
    DOUBLE   shift, and go to state 44
    TIME     shift, and go to state 45
    NAME     shift, and go to state 46
    DECIMAL  shift, and go to state 47

    create_col_list    go to state 48
    create_definition  go to state 49
    data_type          go to state 50


State 30

   31 opt_col_names: '(' . column_list ')'

    NAME  shift, and go to state 51

    column_list  go to state 52


State 31

   28 insert_stmt: insert_table_name opt_col_names . VALUES insert_vals_list

    VALUES  shift, and go to state 53


State 32

   46 opt_where: WHERE . expr
   47          | WHERE . NAME '=' '(' select_stmt ')'
   48          | WHERE . NAME IN '(' select_stmt ')'

    NAME    shift, and go to state 54
    INTNUM  shift, and go to state 55
    DOUNUM  shift, and go to state 56

    expr  go to state 57


State 33

   58 delete_stmt: delete_table_name opt_where .

    $default  reduce using rule 58 (delete_stmt)


State 34

   60 update_stmt: update_table_name SET . update_asgn_list opt_where

    NAME    shift, and go to state 58
    INTNUM  shift, and go to state 55
    DOUNUM  shift, and go to state 56

    expr              go to state 59
    update_asgn_list  go to state 60


State 35

   10 create_database_stmt: CREATE DATABASE NAME .

    $default  reduce using rule 10 (create_database_stmt)


State 36

   12 create_table_name: CREATE TABLE NAME .

    $default  reduce using rule 12 (create_table_name)


State 37

   29 insert_table_name: INSERT INTO NAME .

    $default  reduce using rule 29 (insert_table_name)


State 38

   59 delete_table_name: DELETE FROM NAME .

    $default  reduce using rule 59 (delete_table_name)


State 39

   40 select_stmt: SELECT select_expr_list FROM . select_table_name opt_where

    NAME  shift, and go to state 61

    select_table_name  go to state 62


State 40

   43 select_expr_list: select_expr_list ',' . NAME

    NAME  shift, and go to state 63


State 41

    1 start: start stmt ';' '\n' .

    $default  reduce using rule 1 (start)


State 42

   17 data_type: VARCHAR . '(' INTNUM ')'

    '('  shift, and go to state 64


State 43

   18 data_type: INT .

    $default  reduce using rule 18 (data_type)


State 44

   19 data_type: DOUBLE .

    $default  reduce using rule 19 (data_type)


State 45

   20 data_type: TIME .

    $default  reduce using rule 20 (data_type)


State 46

   16 create_definition: NAME . data_type column_atts

    VARCHAR  shift, and go to state 42
    INT      shift, and go to state 43
    DOUBLE   shift, and go to state 44
    TIME     shift, and go to state 45
    DECIMAL  shift, and go to state 47

    data_type  go to state 65


State 47

   21 data_type: DECIMAL . '(' INTNUM ',' INTNUM ')'

    '('  shift, and go to state 66


State 48

   11 create_table_stmt: create_table_name '(' create_col_list . ')'
   15 create_col_list: create_col_list . ',' create_definition

    ')'  shift, and go to state 67
    ','  shift, and go to state 68


State 49

   14 create_col_list: create_definition .

    $default  reduce using rule 14 (create_col_list)


State 50

   13 create_col_list: data_type .

    $default  reduce using rule 13 (create_col_list)


State 51

   32 column_list: NAME .

    $default  reduce using rule 32 (column_list)


State 52

   31 opt_col_names: '(' column_list . ')'
   33 column_list: column_list . ',' NAME

    ')'  shift, and go to state 69
    ','  shift, and go to state 70


State 53

   28 insert_stmt: insert_table_name opt_col_names VALUES . insert_vals_list

    '('  shift, and go to state 71

    insert_vals_list  go to state 72


State 54

   47 opt_where: WHERE NAME . '=' '(' select_stmt ')'
   48          | WHERE NAME . IN '(' select_stmt ')'
   49 expr: NAME .

    IN   shift, and go to state 73
    '='  shift, and go to state 74

    $default  reduce using rule 49 (expr)


State 55

   50 expr: INTNUM .

    $default  reduce using rule 50 (expr)


State 56

   51 expr: DOUNUM .

    $default  reduce using rule 51 (expr)


State 57

   46 opt_where: WHERE expr .
   52 expr: expr . COMPARISON expr
   53     | expr . '+' expr
   54     | expr . '-' expr
   55     | expr . '*' expr
   56     | expr . '/' expr
   57     | expr . '%' expr

    '+'         shift, and go to state 75
    '-'         shift, and go to state 76
    '*'         shift, and go to state 77
    '/'         shift, and go to state 78
    '%'         shift, and go to state 79
    COMPARISON  shift, and go to state 80

    $default  reduce using rule 46 (opt_where)


State 58

   49 expr: NAME .

    $default  reduce using rule 49 (expr)


State 59

   52 expr: expr . COMPARISON expr
   53     | expr . '+' expr
   54     | expr . '-' expr
   55     | expr . '*' expr
   56     | expr . '/' expr
   57     | expr . '%' expr
   62 update_asgn_list: expr . COMPARISON expr

    '+'         shift, and go to state 75
    '-'         shift, and go to state 76
    '*'         shift, and go to state 77
    '/'         shift, and go to state 78
    '%'         shift, and go to state 79
    COMPARISON  shift, and go to state 81


State 60

   60 update_stmt: update_table_name SET update_asgn_list . opt_where
   63 update_asgn_list: update_asgn_list . ',' NAME COMPARISON expr

    WHERE  shift, and go to state 32
    ','    shift, and go to state 82

    $default  reduce using rule 45 (opt_where)

    opt_where  go to state 83


State 61

   41 select_table_name: NAME .

    $default  reduce using rule 41 (select_table_name)


State 62

   40 select_stmt: SELECT select_expr_list FROM select_table_name . opt_where

    WHERE  shift, and go to state 32

    $default  reduce using rule 45 (opt_where)

    opt_where  go to state 84


State 63

   43 select_expr_list: select_expr_list ',' NAME .

    $default  reduce using rule 43 (select_expr_list)


State 64

   17 data_type: VARCHAR '(' . INTNUM ')'

    INTNUM  shift, and go to state 85


State 65

   16 create_definition: NAME data_type . column_atts

    NOT      shift, and go to state 86
    DEFAULT  shift, and go to state 87
    UNIQUE   shift, and go to state 88
    PRIMARY  shift, and go to state 89
    CHECK    shift, and go to state 90

    $default  reduce using rule 22 (column_atts)

    column_atts  go to state 91


State 66

   21 data_type: DECIMAL '(' . INTNUM ',' INTNUM ')'

    INTNUM  shift, and go to state 92


State 67

   11 create_table_stmt: create_table_name '(' create_col_list ')' .

    $default  reduce using rule 11 (create_table_stmt)


State 68

   15 create_col_list: create_col_list ',' . create_definition

    NAME  shift, and go to state 46

    create_definition  go to state 93


State 69

   31 opt_col_names: '(' column_list ')' .

    $default  reduce using rule 31 (opt_col_names)


State 70

   33 column_list: column_list ',' . NAME

    NAME  shift, and go to state 94


State 71

   34 insert_vals_list: '(' . insert_vals ')'

    DEFAULT  shift, and go to state 95
    NAME     shift, and go to state 58
    INTNUM   shift, and go to state 55
    DOUNUM   shift, and go to state 56

    insert_vals  go to state 96
    expr         go to state 97


State 72

   28 insert_stmt: insert_table_name opt_col_names VALUES insert_vals_list .
   35 insert_vals_list: insert_vals_list . ',' '(' insert_vals ')'

    ','  shift, and go to state 98

    $default  reduce using rule 28 (insert_stmt)


State 73

   48 opt_where: WHERE NAME IN . '(' select_stmt ')'

    '('  shift, and go to state 99


State 74

   47 opt_where: WHERE NAME '=' . '(' select_stmt ')'

    '('  shift, and go to state 100


State 75

   53 expr: expr '+' . expr

    NAME    shift, and go to state 58
    INTNUM  shift, and go to state 55
    DOUNUM  shift, and go to state 56

    expr  go to state 101


State 76

   54 expr: expr '-' . expr

    NAME    shift, and go to state 58
    INTNUM  shift, and go to state 55
    DOUNUM  shift, and go to state 56

    expr  go to state 102


State 77

   55 expr: expr '*' . expr

    NAME    shift, and go to state 58
    INTNUM  shift, and go to state 55
    DOUNUM  shift, and go to state 56

    expr  go to state 103


State 78

   56 expr: expr '/' . expr

    NAME    shift, and go to state 58
    INTNUM  shift, and go to state 55
    DOUNUM  shift, and go to state 56

    expr  go to state 104


State 79

   57 expr: expr '%' . expr

    NAME    shift, and go to state 58
    INTNUM  shift, and go to state 55
    DOUNUM  shift, and go to state 56

    expr  go to state 105


State 80

   52 expr: expr COMPARISON . expr

    NAME    shift, and go to state 58
    INTNUM  shift, and go to state 55
    DOUNUM  shift, and go to state 56

    expr  go to state 106


State 81

   52 expr: expr COMPARISON . expr
   62 update_asgn_list: expr COMPARISON . expr

    NAME    shift, and go to state 58
    INTNUM  shift, and go to state 55
    DOUNUM  shift, and go to state 56

    expr  go to state 107


State 82

   63 update_asgn_list: update_asgn_list ',' . NAME COMPARISON expr

    NAME  shift, and go to state 108


State 83

   60 update_stmt: update_table_name SET update_asgn_list opt_where .

    $default  reduce using rule 60 (update_stmt)


State 84

   40 select_stmt: SELECT select_expr_list FROM select_table_name opt_where .

    $default  reduce using rule 40 (select_stmt)


State 85

   17 data_type: VARCHAR '(' INTNUM . ')'

    ')'  shift, and go to state 109


State 86

   23 column_atts: NOT . NULLS

    NULLS  shift, and go to state 110


State 87

   24 column_atts: DEFAULT .

    $default  reduce using rule 24 (column_atts)


State 88

   25 column_atts: UNIQUE .

    $default  reduce using rule 25 (column_atts)


State 89

   27 column_atts: PRIMARY . KEY

    KEY  shift, and go to state 111


State 90

   26 column_atts: CHECK .

    $default  reduce using rule 26 (column_atts)


State 91

   16 create_definition: NAME data_type column_atts .

    $default  reduce using rule 16 (create_definition)


State 92

   21 data_type: DECIMAL '(' INTNUM . ',' INTNUM ')'

    ','  shift, and go to state 112


State 93

   15 create_col_list: create_col_list ',' create_definition .

    $default  reduce using rule 15 (create_col_list)


State 94

   33 column_list: column_list ',' NAME .

    $default  reduce using rule 33 (column_list)


State 95

   37 insert_vals: DEFAULT .

    $default  reduce using rule 37 (insert_vals)


State 96

   34 insert_vals_list: '(' insert_vals . ')'
   38 insert_vals: insert_vals . ',' expr
   39            | insert_vals . ',' DEFAULT

    ')'  shift, and go to state 113
    ','  shift, and go to state 114


State 97
